--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,9 +1,11 @@
 {
   "name": "@foo/shared",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "main": "build/index.js",
   "types": "build/index.d.ts",
-  "files": ["build"],
+  "files": [
+    "build"
+  ],
   "license": "MIT",
   "devDependencies": {
     "typescript": "^4.6.3"
