--- a/lerna.json
+++ b/lerna.json
@@ -4,5 +4,11 @@
   ],
   "version": "0.0.1",
   "useWorkspaces": true,
-  "npmClient": "yarn"
+  "npmClient": "yarn",
+  "command": {
+    "publish": {
+      "ignoreChanges": ["*.md"],
+      "registry": "https://npm.pkg.github.com"
+    }
+  }
 }
