--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -35,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "publishConfig": {
+    "@enlightenL:registry": "https://npm.pkg.github.com"
   }
 }
