--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@enlightenL/app",
+  "name": "@enlightenl/app",
   "version": "0.0.6",
   "private": true,
   "dependencies": {
-    "@enlightenL/shared": "^0.0.6",
+    "@enlightenl/shared": "^0.0.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
@@ -37,6 +37,6 @@
     ]
   },
   "publishConfig": {
-    "@enlightenL:registry": "https://npm.pkg.github.com"
+    "@enlightenl:registry": "https://npm.pkg.github.com"
   }
 }
