--- a/lerna.json
+++ b/lerna.json
@@ -10,7 +10,7 @@
       "ignoreChanges": [
         "*.md"
       ],
-      "@enlightenl:registry": "https://npm.pkg.github.com"
+      "registry": "https://npm.pkg.github.com"
     }
   }
 }
