--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -37,6 +37,6 @@
     ]
   },
   "publishConfig": {
-    "@enlightenl:registry": "https://npm.pkg.github.com"
+    "registry": "https://npm.pkg.github.com"
   }
 }
